library/pod-security-policy/volumes/samples/psp-volume-types/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: volumes
tests:
- name: host-path-disallowed
  template: template.yaml
  constraint: samples/psp-volume-types/constraint.yaml
